syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "ProcessControlService";

package ProcessControlService;

service ProcessControlService {
	rpc UpdateProcessControlConditionsWithHistory(UpdateProcessControlConditionsWithHistoryRequest) returns (NoParams);
	rpc LoadProcessControlConditionForLocation(Long) returns(LoadProcessControlConditionForLocationResponse);
	rpc InsertProcessControlConditionsWithHistory(InsertProcessControlConditionsWithHistoryRequest) returns (ListOfProcessControlCondition);
	rpc LoadProcessControlConditions(NoParams) returns(ListOfProcessControlConditions);
}

message ListOfProcessControlConditions {
	repeated ProcessControlCondition conditions = 1;
} 

message ListOfProcessControlConditionDiffs {
	repeated ProcessControlConditionDiff conditionDiff = 1;
} 

message UpdateProcessControlConditionsWithHistoryRequest {
	ListOfProcessControlConditionDiffs conditionDiffs = 1;
}

message LoadProcessControlConditionForLocationResponse {
	ProcessControlCondition value = 1;
}

message InsertProcessControlConditionsWithHistoryRequest {
	ListOfProcessControlConditionDiffs diffs = 1;
	bool returnList = 2;
}
